# Yuumi

./: .gitattributes  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  opgg.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  components.d.ts  i18n.ts  main.ts  opgg.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logging.rs  loot.rs  main.rs  signalr.rs  tools.rs  updater.rs  upload.rs
src-tauri/src/agents/: auto_bp.rs  auto_match.rs  auto_screenshot.rs  mod.rs
src-tauri/src/commands/: config.rs  lcu.rs  mod.rs  tools.rs
src-tauri/src/lcu/: client.rs  game_data.rs  mod.rs  monitor.rs  ws.rs
src-tauri/src/parsers/: game_info.rs  match_parser.rs  mod.rs  summoner.rs  tft.rs
src/api/: lcu.ts  loot.ts
src/components/: ChampionPicker.vue  ColorPicker.vue  ColorPickerWithAlpha.vue  Greet.vue  LcuImage.vue  NaiveUIBridge.vue  OpggModal.vue  OpggWindow.vue  SpellPicker.vue  UpdateDialog.vue
src/components/career/: LootManagerTab.vue  MatchHistoryTab.vue
src/components/gameinfo/: PlayerCard.vue  PlayerMatchColumn.vue  PremadeLegend.vue
src/components/layout/: CustomTitleBar.vue  NavigationSidebar.vue
src/components/tools/: AutoAcceptCard.vue  AutoHoverCard.vue  AutoSwapCard.vue  LcuQuickActionsCard.vue  SpectateCard.vue
src/composables/: useAutoSaveConfig.ts  useGamePlayerData.ts  useLcuAsset.ts  useLoot.ts  useMatchHistory.ts  usePlayerSearch.ts  usePremadeGroup.ts  useToast.ts
src/locales/: en-US.json  zh-CN.json  zh-TW.json
src/store/: lcuStore.ts
src/types/: gameInfo.ts
src/utils/: championCache.ts  theme.ts
src/views/: BenchOverlay.vue  Career.vue  GameInfo.vue  Home.vue  Notice.vue  Search.vue  Settings.vue  TFT.vue  Tools.vue
