# Copyright 2019-2024 Tauri Programme within The Commons Conservancy
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "yuumi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yuumi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（忽略 SSL）
reqwest = { version = "0.12", features = ["json"] }
http = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# 进程检测
sysinfo = "0.33"
regex-lite = "0.1"

# 编码
base64 = "0.22"

# TLS（WebSocket 用，等价于 Python ssl=False 的完全不验证）
rustls = { version = "0.23", features = ["ring"] }

# 路径
dirs = "6"

# 日志
log = "0.4"
flexi_logger = "0.29"
